# nontext

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
backend/: broda_list_sample.txt  process_dictionary.py
client/: package-lock.json  package.json  vite.config.js
client/public/: dictionary.json
client/src/: App.jsx  App.test.jsx  index.css
client/src/components/: ClueColumn.jsx  CrosswordGrid.jsx
client/src/engine/: gridEngine.js  gridEngine.test.js  puzzleEngine.js
client/src/hooks/: useGrid.behavior.test.jsx  useGrid.js  useGrid.test.jsx
client/src/puzzle/: samplePuzzle.js
docs/: PROJECT MANIFEST_ LACUNA (The Lacanian Crossword Engine).md
solver/: Cargo.toml  README.md
solver/src/: dawg.rs  domain.rs  grid.rs  layout.rs  lib.rs  solver.rs
