[package]
name = "lacuna-solver"
version = "0.1.0"
edition = "2021"
description = "The Crystal: Industrial Constraint Programming Engine for Lacuna"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
